--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,49 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>
+      <div>
+        <img src="/jserror.jpg" alt="Для работы сайта необходимо включить JavaScript" />
+        <p style="text-align: center; font-size: 16px; font-weight: bold;">Для работы сайта необходимо включить JavaScript</p>
+      </div>
+    </noscript>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" async>
+      ;(function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            ;(m[i].a = m[i].a || []).push(arguments)
+          }
+        m[i].l = 1 * new Date()
+        for (var j = 0; j < document.scripts.length; j++) {
+          if (document.scripts[j].src === r) {
+            return
+          }
+        }
+        ;((k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a))
+      })(
+        window,
+        document,
+        'script',
+        'https://mc.yandex.ru/metrika/tag.js?id=104834035',
+        'ym',
+      )
+
+      ym(104834035, 'init', {
+        ssr: true,
+        webvisor: true,
+        clickmap: true,
+        ecommerce: 'dataLayer',
+        accurateTrackBounce: true,
+        trackLinks: true,
+      })
+    </script>
+    <!-- /Yandex.Metrika counter -->
   </body>
 </html>
